--- a/src/org/horizoncolumbus/hs/GameUI.form
+++ b/src/org/horizoncolumbus/hs/GameUI.form
@@ -1,58 +1,98 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.horizoncolumbus.hs.GameUI">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="24" y="20" width="442" height="358"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <vspacer id="8b65e">
+      <component id="ac091" class="javax.swing.JLabel" binding="welcomeLabel">
         <constraints>
-          <grid row="1" column="0" row-span="5" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="73840" class="javax.swing.JButton" binding="singleplayerButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-12828863"/>
-          <enabled value="true"/>
-          <foreground color="-4473925"/>
-          <hideActionText value="false"/>
-          <text value="&amp;Singleplayer"/>
+          <text value="Welcome to Rock Paper Scissors Lizard Spock"/>
         </properties>
       </component>
-      <component id="c9194" class="javax.swing.JButton" binding="multiplayerButton" default-binding="true">
+      <grid id="33cfd" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="3" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="bb862" class="javax.swing.JButton" binding="rulesButton" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Rules"/>
+            </properties>
+          </component>
+          <component id="f6b02" class="javax.swing.JButton" binding="playButton">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Play"/>
+            </properties>
+          </component>
+          <component id="cac59" class="javax.swing.JButton" binding="twoPlayersButton">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="2 Players (Player Vs. Player)"/>
+            </properties>
+          </component>
+          <component id="e8749" class="javax.swing.JButton" binding="singlePlayerButton">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="1 Player (Vs. AI)"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="fdb91" class="javax.swing.JLabel" binding="playerSelectLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <enabled value="true"/>
-          <text value="&amp;Multiplayer"/>
+          <text value="How many players?"/>
         </properties>
       </component>
-      <component id="30f86" class="javax.swing.JButton" binding="rulesButton" default-binding="true">
+      <component id="f889e" class="javax.swing.JLabel" binding="rulesLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="&amp;Rules"/>
+          <text value="Rules"/>
         </properties>
       </component>
-      <component id="6a563" class="javax.swing.JLabel" binding="welcomeToRockPaperLabel">
+      <component id="9f91c" class="javax.swing.JTextArea" binding="rulesTextArea">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="2" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
         </constraints>
         <properties>
-          <text value="Welcome to Rock, Paper, Scissors, Lizard, Spock"/>
+          <editable value="false"/>
+          <text value="Scissors cuts paper. &#10;Paper covers rock. &#10;Rock crushes lizard. &#10;Lizard poisons Spock. &#10;Spock smashes scissors. &#10;Scissors decapitates lizard. &#10;Lizard eats paper. &#10;Paper disproves Spock. &#10;Spock vaporizes rock. &#10;Rock crushes scissors."/>
+        </properties>
+      </component>
+      <component id="5260a" class="javax.swing.JButton" binding="backButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Back"/>
         </properties>
       </component>
     </children>
   </grid>
-  <inspectionSuppressions>
-    <suppress inspection="I18nForm" id="6a563"/>
-  </inspectionSuppressions>
 </form>
