GameUI Code more clean (using methods)

--- a/src/org/horizoncolumbus/hs/TwoPlayerUI.form
+++ b/src/org/horizoncolumbus/hs/TwoPlayerUI.form
@@ -1,59 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.horizoncolumbus.hs.TwoPlayerUI">
-  <grid id="27dc6" binding="twoPlayerPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="twoPlayerPanel" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="273"/>
+      <xy x="20" y="20" width="500" height="259"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="908ad" class="javax.swing.JLabel" binding="gestureLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Choose your Gesture"/>
         </properties>
       </component>
-      <component id="ab1f4" class="javax.swing.JButton" binding="button1" default-binding="true">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Button"/>
-        </properties>
-      </component>
-      <component id="23c6b" class="javax.swing.JButton" binding="button2" default-binding="true">
+      <component id="ab1f4" class="javax.swing.JButton" binding="rockButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Rock"/>
         </properties>
       </component>
-      <component id="93ce1" class="javax.swing.JButton" binding="button3" default-binding="true">
+      <component id="23c6b" class="javax.swing.JButton" binding="scissorsButton" default-binding="true">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Scissors"/>
         </properties>
       </component>
-      <component id="7d0be" class="javax.swing.JButton" binding="button4" default-binding="true">
+      <component id="93ce1" class="javax.swing.JButton" binding="paperButton" default-binding="true">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Paper"/>
         </properties>
       </component>
-      <component id="601bd" class="javax.swing.JButton" binding="button5" default-binding="true">
+      <component id="7d0be" class="javax.swing.JButton" binding="lizardButton" default-binding="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="Lizard"/>
+        </properties>
+      </component>
+      <component id="601bd" class="javax.swing.JButton" binding="spockButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Spock"/>
+        </properties>
+      </component>
+      <component id="b5106" class="javax.swing.JLabel" binding="askNameLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="What is your name?"/>
+          <verticalAlignment value="0"/>
+        </properties>
+      </component>
+      <component id="416b1" class="javax.swing.JLabel" binding="player2Label">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <labelFor value="9dfef"/>
+          <text value="Player 2:"/>
+        </properties>
+      </component>
+      <component id="bcf24" class="javax.swing.JButton" binding="continueButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Continue"/>
+        </properties>
+      </component>
+      <component id="485f8" class="javax.swing.JTextField" binding="player1TextField">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+          <toolTipText value="Enter Player 1 Name"/>
+        </properties>
+      </component>
+      <component id="9dfef" class="javax.swing.JTextField" binding="player2TextField">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+          <toolTipText value="Enter Player 2 Name"/>
+        </properties>
+      </component>
+      <component id="3755e" class="javax.swing.JLabel" binding="player1Label">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <labelFor value="485f8"/>
+          <text value="Player 1:"/>
         </properties>
       </component>
     </children>
